First version of module

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name    = MooseX-EasyAcc
 author  = Edward Allen <ealleniii@cpan.org>
-license = Perl_5
+license = Artistic_2_0
 copyright_holder = Edward J. Allen III
 copyright_year   = 2011
 
@@ -23,8 +23,6 @@ authority = cpan:EALLENIII
 [CompileTests]
 fake_home = 1
 [ExtraTests]
-[CriticTests]
-critic_config = t/perlcriticrc
 [PodCoverageTests]
 [PodSyntaxTests]
 [Test::Pod::LinkCheck]
